language/evm/move-to-yul/tests/fallback-receive-test/ReceiveFallback.exp
/* =======================================
 * Generated by Move-To-Yul compiler v0.0
 * ======================================= */

/// @use-src 2:"tests/fallback-receive-test/ReceiveFallback.move"

object "A2_M" {
    code {
        codecopy(0, dataoffset("A2_M_deployed"), datasize("A2_M_deployed"))
        return(0, datasize("A2_M_deployed"))
    }
    object "A2_M_deployed" {
        code {
            mstore(0, memoryguard(160))
            if iszero(lt(calldatasize(), 4))
            {
                let selector := $ShiftRight(224, calldataload(0))
                switch selector
                default {}
            }
            if iszero(calldatasize()) { A2_M_receive() stop() }
            if callvalue()
            {
                $Abort(99)
            }
            let retval := A2_M_fallback(0, calldatasize()) stop()
            return(add(retval, 0x20), mload(retval))
            function A2_M_fallback(x) -> $result {
                let $t1, $t2
                // $t1 := 1
                /// @src 2:141:142
                $t1 := 1
                // $t2 := +($t0, $t1)
                /// @src 2:139:140
                $t2 := $AddU64(x, $t1)
                // return $t2
                /// @src 2:137:142
                $result := $t2
            }

            function A2_M_receive() {
                // return ()
                /// @src 2:71:78
            }

            function $Abort(code) {
                mstore(0, code)
                revert(24, 8) // TODO: store code as a string?
            }
            function $AbortBuiltin() {
                $Abort(sub(0, 1))
            }
            function $AddU64(x, y) -> r {
                if lt(sub(0xffffffffffffffff, x), y) { $AbortBuiltin() }
                r := add(x, y)
            }
            function $ShiftRight(bits, value) -> r {
                r := shr(bits, value) // evm version >= constantinople
            }
        }
    }
}


!! Errors compiling Yul

Warning: Yul is still experimental. Please use the output with care.
Warning: "switch" statement with only a default case.
  --> <stdin>:18:17:
   |
18 |                 switch selector
   |                 ^ (Relevant source part starts here and spans across multiple lines).

Error: Function "A2_M_fallback" expects 1 arguments but got 2.
  --> <stdin>:26:27:
   |
26 |             let retval := A2_M_fallback(0, calldatasize()) stop()
   |                           ^^^^^^^^^^^^^
